--- a/aac.html
+++ b/aac.html
@@ -83,7 +83,7 @@
 </header>
 
 <!-- Summary Section -->
-<section id="summary" class="bg-white">
+<!--section id="summary" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row">
 			<h1>Summary</h1>
@@ -135,13 +135,99 @@
 			</div>
 		</div>	
 	</div>
+</section-->
+
+<!-- Summary Section -->
+<section id="summary" class="bg-white">
+	<div class="container content-section ">
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-2">
+				<div class="row">
+					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">AAC for people with severe motor dysfunction</h1>
+				</div>
+				<div class="row">
+					<div class="col-sm-4">
+						<p class="text-left" style="font-size: 1.1em">
+							<b>Clients</b><br>
+							<a href="http://www.do-change.eu"> Univ. Hospital of Uberlândia (BR)</a><br>
+							<a href="https://onmi.design">University of Uberlândia (BR)</a><br>
+							<a href="">Université de Lorraine (FR)</a><br>
+							<br>
+							<b>Team up with</b><br>
+							Computer Scientists<br>
+							Biomedical Engineers<br>
+							Electrical Engineers<br>
+							<br>
+						</p>
+					</div>
+					<div class="col-sm-8">
+
+						<div class="row text-left">
+							<div class="col-md-3">
+							    <span class="fa-stack fa-3x">
+							       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+							    	<i class="fa fa-users fa-stack-1x fa"></i>
+							    </span>
+							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Research</h4>
+							    <p style="color:#222; font-size: 1.1em">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p-->
+							     <p class="text-left" style="font-size: 1.1em">
+									<b>Research</b><br> 
+									Task Analysis, Expert Review, Benchmarking<br>	
+									<br>
+								</p>
+							</div> 
+							<div class="col-md-3">
+							    <span class="fa-stack fa-3x">
+							     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+							        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
+							    </span>
+							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Define & Ideate</h4>
+							    <p style="color:#222; font-size: 1.1em">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p-->
+							     <p class="text-left" style="font-size: 1.1em">
+									<b>Define & Ideate</b><br> 
+									Stakeholder managment, Sketch<br>	
+									<br>
+								</p>
+							</div>
+							<div class="col-md-3">
+							    <span class="fa-stack fa-3x">
+							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+							        <i class="fa fa-rocket fa-stack-1x fa"></i>
+							    </span>
+							   	<!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Prototype & Test</h4>
+							    <p style="color:#222`; font-size: 1.1em">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p-->
+							     <p class="text-left" style="font-size: 1.1em">
+									<b>Prototype & Test</b><br> 
+									WPF Prototype, Usability Testing, Data Analysis<br>	
+									<br>
+								</p>
+							</div>
+							<div class="col-md-3">
+							    <span class="fa-stack fa-3x">
+							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+							        <i class="fa fa-bar-chart fa-stack-1x fa"></i>
+							    </span>
+							   	<!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Prototype & Test</h4>
+							    <p style="color:#222`; font-size: 1.1em">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p-->
+							     <p class="text-left" style="font-size: 1.1em">
+									<b>Analysis</b><br> 
+									Data analysis, Statistics, Hyphotesis testing<br>	
+									<br>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
 <!-- Challenge Section -->
 <section id="challenge" class="bg-black">
 	<div class="container content-section text-center">
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+		<div class="col-md-8 col-md-offset-2">
+			<div class="row">
 				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
 				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
 					Design new features for a <strong class="hlw">software</strong><br><br>that supports <strong class="hlw">communication</strong> for<br><br>users with <strong class="hlw">severe motor dysfunction</strong>
@@ -151,12 +237,16 @@
 	</div>
 </section>
 
-<!-- User Research Section -->
+<!-- Process Section -->
 <section id="process-dt" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row" style="padding-top: 45px">
-			<h1 class="service-heading text-center" style="padding-top: 60px">Process</h1>
-			...
+			<div class="col-lg-8 col-lg-offset-2 text-left">
+				<!--h1 class="service-heading" style="font-weight: normal; padding-top: 60px">Process</h1-->
+				<p>
+					(1) Prototype User Interfaces on WPF for different modules of an augmentative and alternative communication software; (2) Prototype input devices to control the system using accelerometers, eye-trackers, switches, electromyography; (3) Plan and execute user tests; (4) Data analysis based on user activity log.
+				</p>
+			</div>
 			<!--div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left">The target users of this project were seniors (+65) who are lonely and are sedentary. Home care, care home, rehabilitation facilities and hospitals are settings that these users belong. The first step was to visit them in a weekly exercise where they perform a shared cooking activity.</p>
 				<img class="img-fluid" src="img/st/userresearch.jpg" alt="">
@@ -190,12 +280,13 @@
 	</div>
 </section>
 
-<!-- Results Section -->
 <section id="results" class="bg-black">
 	<div class="container content-section text-center">
 		<div class="row" style="padding-top: 45px">
 			<h1 class="service-heading text-center" style="color: white; font-weight: normal; padding-top: 60px">Results</h1>
-			<p style="color: white">...</p>
+			<h2 class="project-description text-left" style="color:white; padding-top: 20px">
+				Developed a prototype that allowed patients with ALS, hospitalized at the university hospital, to communicate with family members, caregivers and doctors. The different sensors allowed an easy customization for the users to control the communication software.
+			</h2>
 		</div>
 	</div>
 </section>
@@ -286,6 +377,7 @@
 		</div>
 	</div>
 </section>
+
 
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
