--- a/st.html
+++ b/st.html
@@ -88,51 +88,70 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<div class="row">
-					<h1 class="service-heading text-center" style="font-weight: normal">Summary</h1>
+					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">Engage Seniors To (Re)Establish Food-Related Habits</h1>
+					<!--h1 class="service-heading text-center" style="font-weight: normal">Summary</h1-->
 				</div>
 				<div class="row">
-					<p class="text-left">
-						<b>Date:</b> July 2017<br>
-						<b>Clients:</b> Reach 2020 European Consortium, Eindhoven University of Technology (The, Netherlands), Technical University of Munich (Germany)<br>
-						<b>Service:</b> User research, digital prototype<br>
-						<b>Team size:</b> 4 members working directly<br>
-						<b>Duration:</b> 4 weeks<br>
-						<br>
-						<b>My roles:</b> ...<br><br>
-						<b>Results:</b> ...
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<div class="row">
-					<h1 class="service-heading text-center" style="color:black; font-weight: normal; padding-top: 60px">Methods Overview</h1>
-				</div>
-				<div class="row text-center">
-					<div class="col-md-4">
-					    <span class="fa-stack fa-3x">
-					       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-					    	<i class="fa fa-users fa-stack-1x fa"></i>
-					    </span>
-					    <h4 class="service-heading" style="padding-top: 20px">Research</h4>
-					    <p style="color:#222">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p>
-					</div> 
-					<div class="col-md-4">
-					    <span class="fa-stack fa-3x">
-					     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-					        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
-					    </span>
-					    <h4 class="service-heading" style="padding-top: 20px">Define & Ideate</h4>
-					    <p style="color:#222">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p>
+					<div class="col-sm-4">
+						<p class="text-left" style="font-size: 1.1em">
+							<b>Clients</b><br>
+							<a href="http://reach2020.eu"> Reach 2020 (EU)</a><br>
+							<a href="">TU München (DE)</a><br>
+							<a href="">TU Eindhoven (NL)</a><br>
+							<br>
+							<b>Team up with</b><br>
+							Human-Factors Psychologist<br>
+							Industrial Designer<br>
+							Computer Scientist<br>
+							<br>
+							<b>July 17</b><br>
+							4 weeks<br>
+							<br>
+						</p>
 					</div>
-					<div class="col-md-4">
-					    <span class="fa-stack fa-3x">
-					        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
-					        <i class="fa fa-rocket fa-stack-1x fa"></i>
-					    </span>
-					   	<h4 class="service-heading" style="padding-top: 20px">Prototype & Test</h4>
-					    <p style="color:#222">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p>
+					<div class="col-sm-8">
+
+						<div class="row text-left">
+							<div class="col-md-4">
+							    <span class="fa-stack fa-3x">
+							       	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+							    	<i class="fa fa-users fa-stack-1x fa"></i>
+							    </span>
+							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Research</h4>
+							    <p style="color:#222; font-size: 1.1em">Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking</p-->
+							     <p class="text-left" style="font-size: 1.1em">
+									<b>Research</b><br> 
+									Contextual Inquiry, Interview, Task Analysis, Affinity Diagram, Benchmarking<br>	
+									<br>
+								</p>
+							</div> 
+							<div class="col-md-4">
+							    <span class="fa-stack fa-3x">
+							     	<i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+							        <i class="fa fa-lightbulb-o fa-stack-1x fa"></i>
+							    </span>
+							    <!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Define & Ideate</h4>
+							    <p style="color:#222; font-size: 1.1em">Problem statement, Mapping, Crazy 8s, Sketch, Storyboard</p-->
+							     <p class="text-left" style="font-size: 1.1em">
+									<b>Define & Ideate</b><br> 
+									Stakeholder managment, Design Sprint, Crazy 8s, Sketch, Storyboard<br>	
+									<br>
+								</p>
+							</div>
+							<div class="col-md-4">
+							    <span class="fa-stack fa-3x">
+							        <i class="fa fa-circle fa-stack-2x text-primary circle-bg"></i>
+							        <i class="fa fa-rocket fa-stack-1x fa"></i>
+							    </span>
+							   	<!--h4 class="service-heading" style="padding-top: 20px; font-size: 1.0em; text-transform:none">Prototype & Test</h4>
+							    <p style="color:#222`; font-size: 1.1em">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p-->
+							     <p class="text-left" style="font-size: 1.1em">
+									<b>Prototype & Test</b><br> 
+									Wireframing, Powerpoint, Wizard of Oz, Usability Testing<br>	
+									<br>
+								</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -154,15 +173,15 @@
 	</div>
 </section>
 
-
-
-<!-- User Research Section -->
+<!-- Process Section -->
 <section id="process-dt" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row" style="padding-top: 45px">
 			<div class="col-lg-8 col-lg-offset-2 text-left">
-				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px">Process</h1>
-				...
+				<!--h1 class="service-heading" style="font-weight: normal; padding-top: 60px">Process</h1-->
+				<p>
+					<b>Reach</b> consortium aims to develop a service system that will turn clinical and care environments into personalisable modular sensing, prevention, and intervention systems that encourage the elderly to become healthy via activity (physical, cognitive, mobility, personalized food, etc.).<br><br>One of their focus is to explore food-related activities for seniors at care home facilities. An interactive table developed by TU Munich, composed of a Kinect sensor and a beamer, was applied to the context of usage of the target users.
+				</p>
 			</div>
 			<!--div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left">The target users of this project were seniors (+65) who are lonely and are sedentary. Home care, care home, rehabilitation facilities and hospitals are settings that these users belong. The first step was to visit them in a weekly exercise where they perform a shared cooking activity.</p>
