--- a/st.html
+++ b/st.html
@@ -180,7 +180,7 @@
 			<div class="col-lg-8 col-lg-offset-2 text-left">
 				<!--h1 class="service-heading" style="font-weight: normal; padding-top: 60px">Process</h1-->
 				<p>
-					<b>Reach</b> consortium aims to develop a service system that will turn clinical and care environments into personalisable modular sensing, prevention, and intervention systems that encourage the elderly to become healthy via activity (physical, cognitive, mobility, personalized food, etc.).<br><br>One of their focus is to explore food-related activities for seniors at care home facilities. An interactive table developed by TU Munich, composed of a Kinect sensor and a beamer, was applied to the context of usage of the target users.
+					<b>Reach</b> consortium aims to develop a service system that will turn clinical and care environments into personalisable modular sensing, prevention, and intervention systems that encourage the elderly to become healthy via activity (physical, cognitive, mobility, personalized food, etc.).<br><br>One of their focus is to explore food-related activities for seniors at care home facilities. <<!--An interactive table developed by TU Munich, composed of a Kinect sensor and a beamer, was applied to the context of usage of the target users.-->
 				</p>
 			</div>
 			<!--div class="col-lg-8 col-lg-offset-2">
