...no projects for now

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
        		</div>
 	        <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-6">
-	            	<a class="portfolio-box" href="st.html">
+	            	<a class="portfolio-box" href="#">
 		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
@@ -211,7 +211,7 @@
 	            	</a>	
 	          	</div>
 	          	<div class="col-sm-6">
-		            <a class="portfolio-box">
+		            <a class="portfolio-box" href="#">
 		              	<img class="img-fluid" src="img/db/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
@@ -224,7 +224,7 @@
 		    </div>
 		    <div class="row no-gutter popup-gallery" style="padding-top: 30px">
 		    	
-			    <div class="col-sm-6">
+			    <div class="col-sm-6" href="#">
 			        <a class="portfolio-box" href="aac.html">
 			            <img class="img-fluid" src="img/aac/tb.png" alt="">
 			            <div class="portfolio-box-caption">
@@ -235,7 +235,7 @@
 			            </div>
 			        </a>
 			    </div>
-		        <div class="col-sm-6">
+		        <div class="col-sm-6" href="#">
 		            <a class="portfolio-box">
 		              	<img class="img-fluid" src="img/icu/tb.png" alt="">
 		              	<div class="portfolio-box-caption">
