--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		    <div class="row no-gutter popup-gallery" style="padding-top: 30px">
 		    	
 			    <div class="col-sm-6" href="#">
-			        <a class="portfolio-box" href="aac.html">
+			        <a class="portfolio-box" href="#">
 			            <img class="img-fluid" src="img/aac/tb.png" alt="">
 			            <div class="portfolio-box-caption">
 			                <div class="portfolio-box-caption-content">
