--- a/_dev/index.html
+++ b/_dev/index.html
@@ -78,11 +78,6 @@
 					<p class="intro-text">User Experience Designer</p>
 					</a>
 				</div>
-				<!--div class="col-md-12 col-md-offset-0">
-					<a style="margin-top: 270px" href="#about" class="btn btn-circle page-scroll">
-					<i class="fa fa-angle-double-down animated"></i>
-					</a>
-				</div-->
 			</div>
 		</div>
 	</div>
@@ -91,20 +86,81 @@
 <!-- About Section -->
 <section id="about" class="bg-black">
 	<div class="container content-section text-center">
+		<div class="row">
+        	<div class="col-lg-12 text-center">
+                <h1 style="color:white" class="section-heading">What do I do?</h1>
+                <h3 class="section-subheading text-muted"></h3>
+            </div>
+        </div>
 		<div class="row" style="padding-left: 10px; padding-right: 10px;">
-			<h1 style="color:white">About me</h1>
 			<div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left" style="color:white;">
-					I'm a User Experience Designer based in Eindhoven, The Netherlands, currently working within the <a class="extra" target="_blank" href="http://usitue.nl/">User System Interaction program at TU/e</a>.
+					I'm a User Experience Designer based in Eindhoven, The Netherlands, currently working within the User System Interaction program at TU/e. As an addition to my UX skills, I have a background in Biomedical and Electrical Engineering. I'm also looking for opportunities<!--Between 2013-16 I've designed assistive technologies for people with communication disorders.-->
 				</p>
-				<p class="text-left" style="color:white">
-				 	For the past four years, I've been  <a class="extra"target="_blank" href="http://ieeexplore.ieee.org/document/6880985/">designing assistive technologies solutions</a> for people with communication disorders. I'm inspired to create new solutions that can empower people's life. 
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- About Section -->
+<section id="journey" class="bg-white">
+	<div class="container content-section text-center">
+		<div class="row">
+        	<div class="col-lg-12 text-center">
+                <h1 style="color:black" class="section-heading">My journey to UX</h1>
+                <h3 class="section-subheading text-muted"></h3>
+            </div>
+        </div>
+		<div class="row" style="padding-top: 40px; padding-left: 10px; padding-right: 10px;">
+			<div class="col-lg-8 col-lg-offset-2">
+				<h3 style="color:black">Hacking, Prototyping, Testing: From an engineering school to the UX world</h3>
+				<p class="text-left" style="color:black;">
+					Since college, I've always enjoyed expressing my ideas with digital prototypes, using electronics, microcontrollers, wires, and creativity.  I've explored as much as I could: built real-time system applications, hack an old robot-arm firmware, controlled a pc's keyboard with an eye-tracker device, use physiological signal as input for UI control, and more! 
 				</p>
-				<p class="text-left" style="color:white">
-					To support my skills as a UX professional, I have a background in Biomedical and Electrical Engineering!
+				<p class="text-left" style="color:black;">
+					I always believed that technology has an immense potential to change society. Nevertheless, design needs to take human behavior into account! I discovered this valuable lesson when I shift to a gig where the primary goal was to help ALS patients to communicate with their beloved ones.
 				</p>
-				<p >
-					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="color:white"><i class="fa fa-download" style="color:white"></i> Curriculum Vitae</a>
+				<p class="text-left" style="color:black;">
+					I've started as a developer for Microsoft-based apps focused on Augmentative and Alternative Communication. Over time, I began to spend less time hacking at the lab and more time talking with caregivers, speech-language pathologists, doctors, or anyone concerned with the matter. I've started to hang at hospitals, home cares, rehabilitation facilities, or any place that I could observe and speak (with the help of communication boards) to a real user. 
+				</p>
+				<p class="text-left" style="color:black;">
+					In other words, I left the Matrix to have a glimpse of the real world, and this change gave me a new perspective on life. 
+				</p>
+				<p class="text-left" style="color:black;">
+					After several attempts (with successes and failures), it eventually hit me: a good product is good as its user's involvement during all design stages: research, ideation, prototype, test (*check this four items -> look UX mastery book).</p>
+				<p class="text-left" style="color:black;">
+					In 2016 I moved to Eindhoven, the Netherlands, to pursue my professional doctorate in Human-Machine Interaction and User Experience at the User-System Program at TU/e.
+				</p>
+				<p class="text-left" style="color:black;">
+					Since then, I gasped different projects that range from online ticketing start-up dashboard, tracking real-time activity data of patients with heart disease or heart failure, engaging seniors to reestablish food-behavior habits with interactive tables and communication of operators in a chemical factory using smart-devices.
+				</p>
+				<p class="text-left" style="color:black;">
+					In every project, I dive into the user's world!<br>Passion, comprehension, and empathy are my core guidelines!<br>User-Centered Design is my motto!
+				</p>
+			</div>
+		</div>
+		<div class="row" style="padding-top: 40px; padding-left: 10px; padding-right: 10px;">
+			<div class="col-lg-8 col-lg-offset-2">
+				<h3 style="color:black">Gather, process and analyze: Data's meaning for business</h3>
+				<p class="text-left" style="color:black;">
+					It doesn't matter if your project is for a university's department, a lab, a factory or a hospital: data is everywhere! In the past decades, technology experienced the evolution of solid-state physics. With transistors, sensors, wireless internet, and smartphones we can track, see and store more data then never. 2016's global internet traffic hit the mark of one zettabyte (or 1 000 000 000 000 000 000 000 bytes)! <!--The most prominent challenge here is to extract meaning from this mass of information.-->
+				</p>
+				<p class="text-left" style="color:black;">
+					I had the opportunity to process and analyze all sorts of data in different projects with the help of DSP methods and data visualization. Using statistics, I could answer hypothesis at distinct scenarios: lab's experiments, usability testing for desktop app's and even while I was investigating the amount of waste produced by a hospital!
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- About Section -->
+<section id="vision" class="bg-black">
+	<div class="container content-section text-center">
+		<div class="row" style="padding-top: 40px; padding-left: 10px; padding-right: 10px;">
+			<div class="col-lg-8 col-lg-offset-2">
+				<h3 style="color:white">My vision</h3>
+				<p class="text-left" style="color:white;">
+					As a UX designer, I'm inspired to explore new ideas that can empower people's life. With a user-centered approach, my purpose is to meet users needs with business goals, to design a successful product.
 				</p>
 			</div>
 		</div>
@@ -179,23 +235,9 @@
     </div>
 </section>
 
-<!-- About Section -->
-<section id="vision" class="bg-black">
-	<div class="container content-section text-center">
-		<div class="row">
-			<h1 style="color:white">Vision</h1>
-			<div class="col-lg-8 col-lg-offset-2">
-				<p class="text-left" style="color:white">
-				 	As a UX designer, I'm inspired to explore new ideas that can empower people's life. With a user-centered approach, my goal is to match users needs with business requirements, in order to design a sucessful product.
-				</p>
-
-			</div>
-		</div>
-	</div>
-</section>
 
 <!-- Portfolio Grid Section -->
-<section id="portfolio" class="bg-white p-0">
+<section id="portfolio" class="bg-black p-0">
     <div class="container content-section text-center">
     	<div class="row">
     		<h1>Portfolio</h1>
