--- a/index2.html
+++ b/index2.html
@@ -95,7 +95,7 @@
 		<div class="row" style="padding-left: 10px; padding-right: 10px;">
 			<div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left" style="color:white;">
-					I'm a User Experience Designer based in Eindhoven, The Netherlands, currently working within the User System Interaction program at TU/e. As an addition to my UX skills, I have a background in Biomedical and Electrical Engineering. <!--Between 2013-16 I've designed assistive technologies for people with communication disorders.-->
+					I'm a User Experience Designer based in Eindhoven, The Netherlands, currently working within the User System Interaction program at TU/e. As an addition to my UX skills, I have a Biomedical and Electrical Engineering background. <!--Between 2013-16 I've designed assistive technologies for people with communication disorders.-->
 				</p>
 			</div>
 		</div>
