--- a/index2.html
+++ b/index2.html
@@ -135,7 +135,7 @@
 					Since then, I gasped different projects that range from online ticketing start-up dashboard, tracking real-time activity data of patients with heart disease or heart failure, engaging seniors to reestablish food-behavior habits with interactive tables and communication of operators in a chemical factory using smart-devices.
 				</p>
 				<p class="text-left" style="color:black;">
-					In every project, I dive into the user's world!<br>Passion, comprehension, and empathy are my core guidelines!<br>User-Centered Design is my motto!
+					In every project, I dive into the user's world.<br>Passion, comprehension, and empathy are my core guidelines.<br>User-Centered Design is my motto!
 				</p>
 			</div>
 		</div>
