--- a/index2.html
+++ b/index2.html
@@ -246,7 +246,7 @@
        		</div>
 	        <div class="row no-gutter popup-gallery">
 	          	<div class="col-sm-3">
-	            	<a class="portfolio-box" href="#">
+	            	<a class="portfolio-box" href="_st.html">
 		              	<img class="img-fluid" src="img/st/tb.jpg" alt="">
 		              	<div class="portfolio-box-caption">
 		                	<div class="portfolio-box-caption-content">
