--- a/kooktafel.html
+++ b/kooktafel.html
@@ -271,7 +271,7 @@
 		<!--What did we do?-->
 		<div class="row" style="padding-top: 30px">
 			<div class="col-lg-8 col-lg-offset-2 text-left">
-				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px">What did <b>we achieve</b> by the end of the project?</h1>
+				<h1 class="service-heading" style="font-weight: normal; padding-top: 60px">What did <b>we achieved</b> by the end of the project?</h1>
 				<p>
 					At the end of the case, we provided a <b>prototype</b> to our stakeholders so that they can continue the next stage of the project. 
 					Reach Consortium have a prototype that can be applied in their context of use, like the Lokaal+ activity for instance.
