--- a/kooktafel.html
+++ b/kooktafel.html
@@ -71,12 +71,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<h1 class="brand-heading">De kooktafel</h1>
+					<!--h1 class="brand-heading">De kooktafel</h1>
 					<h2 class="intro-text" style="text-transform: none">Engage seniors to (re)establish food-related habits</h2>
 					<p class="intro-text">Interactive-Table, Cooking Aid, Prototype, User Test</p>
 					<a style="margin-top: 217px" href="#summary" class="btn btn-circle page-scroll">
 					<i class="fa fa-angle-double-down animated"></i>
-					</a>
+					</a-->
 				</div>
 			</div>
 		</div>
@@ -89,7 +89,7 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<div class="row">
-					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">Engage Seniors To (Re)Establish Food-Related Habits</h1>
+					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">De Kooktafel: engage seniors to establish food-related habits</h2>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
