--- a/dochange.html
+++ b/dochange.html
@@ -30,9 +30,6 @@
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 		<i class="fa fa-bars"></i>
 		</button>
-		<a class="navbar-brand page-scroll" href="index.html">
-		Daniel Mariano
-		</a>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
@@ -63,14 +60,14 @@
 		<div class="container">
 			<div class="dbparallax"></div>
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<h1 class="brand-heading">Dashboard for Researchers to Track Data Input from User's Wearables</h1>
+				<div class="col-md-8 col-md-offset-2" style="padding-top: 300px" >
+					<!--h1 class="brand-heading">Dashboard for Researchers to Track Data Input from User's Wearables</h1>
 					<p class="intro-text">
 						Data Visualization, Internet of Things, Wearables
-					</p>
-					<a href="#summary" class="btn btn-circle page-scroll">
-					<i class="fa fa-angle-double-down animated"></i>
-					</a>
+					</p-->
+					<!--a href="#summary" class="btn btn-circle page-scroll">
+					<i class="fa fa-angle-double-down animated" ></i>
+					</a-->
 				</div>
 			</div>
 		</div>
@@ -84,7 +81,7 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<div class="row">
-					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">Dashboard for Researchers to Track Data Input from User's Wearables</h1>
+					<h1 class="brand-heading" style="text-transform: none; font-size: 5.5em">Dashboard for researchers to identify significant data loss a tracking device system</h1>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
@@ -138,7 +135,7 @@
 							    <p style="color:#222`; font-size: 1.1em">Wireframing, Powerpoint, Wizard of Oz, Usability Testing</p-->
 							     <p class="text-left" style="font-size: 1.1em">
 									<b>Coding</b><br> 
-									 Javascript, D3.js, Git, JSON, Jupyter Notebook<br>	
+									 C#, Javascript, D3.js, JSON, Git, Jupyter Notebook<br>	
 									<br>
 								</p>
 							</div>
@@ -157,7 +154,7 @@
 			<div class="row">
 				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
 				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
-					Design a <strong class="hlw">dashboard</strong><br><br>that <strong class="hlw">facilitates</strong> data visualization <br><br>for <strong class="hlw">researchers</strong><!--br><br>using an <strong class="hlw">interactive table</strong-->.
+					DeDesign a <strong class="hlw">dashboard</strong> that allows <strong class="hlw">researchers</strong> to identify in a glance if a specific user or provider <strong class="hlw">presents a significant data loss</strong>
 				</h2>
 			</div>
 		</div>
@@ -257,7 +254,7 @@
 				<p>
 					...
 				</p>
-				<img class="img-fluid" src="img/st/tb_org.jpg" alt="">
+				<img class="img-fluid" src="img/db/team.png" alt="">
 			</div>
 		</div>
 	</div>
