--- a/kooktafel.html
+++ b/kooktafel.html
@@ -85,7 +85,7 @@
 
 <!-- Summary Section -->
 <section id="summary" class="bg-white">
-	<div class="container content-section ">
+	<div class="container content-section" style="padding-right: 40px; padding-left: 40px">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<div class="row">
@@ -164,7 +164,7 @@
 		<div class="col-md-8 col-md-offset-2">
 			<div class="row">
 				<h1 class="text-center" style="color:white; font-weight: normal">Challenge</h1>
-				<h2 class="project-description text-left" style="color:white; padding-top: 20px">
+				<h2 class="project-description text-left" style="color:white; padding-top: 20px; padding-right: 40px; padding-left: 40px">
 					Design a <strong class="hlw">digital prototype</strong><br><br>that <strong class="hlw">facilitates</strong> food-related activities<br><br>for a specific group of <strong class="hlw">seniors</strong><!--br><br>using an <strong class="hlw">interactive table</strong-->.
 				</h2>
 			</div>
