--- a/kooktafel.html
+++ b/kooktafel.html
@@ -292,7 +292,7 @@
 		</div>
 
 		<!--Photos-->
-		<div class="row" style="font-weight: normal; padding-top: 30px">
+		<!--div class="row" style="font-weight: normal; padding-top: 30px">
 			<div class="col-lg-8 col-lg-offset-2 text-left">
 		        <div class="row no-gutter popup-gallery">
 		          	<div class="col-sm-6">
@@ -314,7 +314,7 @@
 		            	</a>	
 		          	</div>
 		        </div>
-		        <div class="row no-gutter popup-gallery">
+		        <div class="row no-gutter popup-gallery" style="font-weight: normal; padding-top: 30px">
 		          	<div class="col-sm-6">
 		            	<a class="portfolio-box" href="#">
 			              	<img class="img-fluid" src="img/st/uxcamp1.jpg" alt="">
@@ -327,6 +327,32 @@
 		          	<div class="col-sm-6">
 		            	<a class="portfolio-box" href="#">
 			              	<img class="img-fluid" src="img/st/uxcamp2.jpg" alt="">
+			              	<div class="portfolio-box-caption">
+			                	<div class="portfolio-box-caption-content">
+			                	</div>
+			             	 </div>
+		            	</a>	
+		          	</div>
+		        </div>
+	       	</div>
+		</div-->
+
+		<!--Photos-->
+		<div class="row" style="font-weight: normal; padding-top: 30px">
+			<div class="col-lg-8 col-lg-offset-2 text-left">
+		        <div class="row no-gutter popup-gallery">
+		          	<div class="col-sm-6">
+		            	<a class="portfolio-box" href="#">
+			              	<img class="img-fluid" src="img/st/group.png" alt="">
+			              	<div class="portfolio-box-caption">
+			                	<div class="portfolio-box-caption-content">
+			                	</div>
+			             	 </div>
+		            	</a>	
+		          	</div>
+		          	<div class="col-sm-6">
+		            	<a class="portfolio-box" href="#">
+			              	<img class="img-fluid" src="img/st/uxcamp1.jpg" alt="">
 			              	<div class="portfolio-box-caption">
 			                	<div class="portfolio-box-caption-content">
 			                	</div>
