--- a/work/corbion/index.html
+++ b/work/corbion/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Dashboard for Researchers - Portfolio Daniel Mariano</title>
+<title>Smart devices for operators in a factory</title>
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
@@ -55,7 +55,7 @@
 </nav>
 <!-- Intro Header -->
 
-<header class="intro db">
+<header class="intro db dochangeparallax">
 	<div class="intro-body">
 		<div class="container">
 			<div class="dbparallax"></div>
