--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   gtag('config', 'UA-105775107-1');
 </script>
+<script src="js/typewriter.js"></script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -44,9 +45,15 @@
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-			<ul class="nav navbar-nav">				
+			<ul class="nav navbar-nav">
 				<li>
-					<a class="page-scroll" href="#contact">Contact</a>
+					<a class="page-scroll" href="#">About</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#">Projects</a>
+				</li>
+				<li>
+					<a class="page-scroll" href="#">Contact</a>
 				</li>
 				<li>
 					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
@@ -63,21 +70,57 @@
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-right" style="padding-top: 100px">
-					<h1 class="brand-heading">Daniel Mariano</h1>
-					<p class="intro-text">User Experience Designer</p>
-					</a>
+				<div class="col-md-12 col-md-offset-0 text-left" style="padding-top: 300px">
+					<div class="row" >
+						<span class="fa-stack fa-2x">
+                    		<a href="https://www.linkedin.com/in/danielmariano/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa"></i></a>
+                		</span>
+                		<span class="fa-stack fa-2x">
+                    		<a href="https://github.com/dtgmariano" target="_blank"><i class="fa fa-github fa-stack-1x fa"></i></a>
+                		</span>
+                		<span class="fa-stack fa-2x">
+                    		<a href="https://twitter.com/dtgmariano" target="_blank"><i class="fa fa-twitter fa-stack-1x fa"></i></a>
+                		</span>
+					</div>
+					<h1 class="brand-heading" >Daniel Mariano</h1>
+					<p class="intro-text typewrite" data-period="1000" data-type='["User Experience Designer", "Jam Session Explorer", "User Experience Designer", "Cook Hacker", "User Experience Designer", "Music Lover"]'></p>
 				</div>
-				<!--div class="col-md-12 col-md-offset-0">
-					<a style="margin-top: 270px" href="#about" class="btn btn-circle page-scroll">
-					<i class="fa fa-angle-double-down animated"></i>
-					</a>
-				</div-->
 			</div>
 		</div>
+
 	</div>
 </header>
 
+<!-- About Section -->
+<section id="about" class="bg-black">
+	<div class="container content-section text-center">
+		<div class="row">
+        	<div class="col-lg-12 text-center" >
+                <h1 class="section-heading" style="color:white">Who am I?</h1>
+            </div>
+        </div>
+		<div class="row" style="padding-left: 10px; padding-right: 10px;">
+			<div class="col-lg-8 col-lg-offset-2">
+				<p class="text-left" style="color:#FFFFFF">
+					I am Daniel Mariano, a User Experience Designer based in Eindhoven, The Netherlands, currently working within the User System Interaction program at TU/e. As an addition to my UX skills, I have a Biomedical and Electrical Engineering background.
+					<br>
+				</p>
+			</div>
+		</div>
+		<div class="row" style="padding-top: 4em">
+        	<div class="col-lg-12 text-center">
+                <h1 class="section-heading" style="color:white">My Vision</h1>
+            </div>
+        </div>
+		<div class="row" style="padding-left: 10px; padding-right: 10px;">
+			<div class="col-lg-8 col-lg-offset-2">
+				<p class="text-left" style="color:#FFFFFF">
+					 As a UX designer, I'm inspired to explore new ideas that can empower people's life. With a user-centered approach, my purpose is to meet users needs with business goals, to design a successful product.
+				</p>
+			</div>
+		</div>
+	</div>
+</section>
 
 <!-- Contact Section -->
 <section id="contact" class="bg-white">
@@ -85,20 +128,9 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h1>Let's get in touch</h1>
-				<p>Send me a message!</p>
+				<p class="intro-text typewrite" data-period="1000" data-type='["Send me a message"]'></p>
 				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
 				<p></p>
-				<ul class="list-inline banner-social-buttons">
-					<li>
-					<a href="https://github.com/dtgmariano" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-github fa-fw"></i><span class="network-name"> Github</span></a>
-					</li>
-					<li>
-					<a href="https://www.linkedin.com/in/danielmariano/" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-linkedin fa-fw"></i><span class="network-name"> LinkedIn</span></a>
-					</li>
-					<li>
-					<a href="https://twitter.com/dtgmariano" target="_blank" class="btn btnghost btn-lg"><i class="fa fa-twitter fa-fw"></i><span class="network-name"> Twitter</span></a>
-					</li>
-				</ul>
 			</div>
 		</div>
 	</div>
