--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
 				<li>
 					<a class="page-scroll" href="#">Contact</a>
 				</li>
-				<li>
-					<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0">CV</a>
-				</li>
 			</ul>
 		</div>
 		<!-- /.navbar-collapse -->
@@ -70,7 +67,7 @@
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-left" style="padding-top: 300px">
+				<div class="col-md-12 col-md-offset-0 text-left" style="padding-top: 375px">
 					<div class="row" >
 						<span class="fa-stack fa-2x">
                     		<a href="https://www.linkedin.com/in/danielmariano/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa"></i></a>
@@ -81,6 +78,7 @@
                 		<span class="fa-stack fa-2x">
                     		<a href="https://twitter.com/dtgmariano" target="_blank"><i class="fa fa-twitter fa-stack-1x fa"></i></a>
                 		</span>
+                		
 					</div>
 					<h1 class="brand-heading" >Daniel Mariano</h1>
 					<p class="intro-text typewrite" data-period="1000" data-type='["User Experience Designer", "Jam Session Explorer", "User Experience Designer", "Cook Hacker", "User Experience Designer", "Music Lover"]'></p>
@@ -119,6 +117,9 @@
 				</p>
 			</div>
 		</div>
+		<div class="row" style="padding-top: 4em">
+			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
+		</div>
 	</div>
 </section>
 
@@ -130,7 +131,7 @@
 				<h1>Let's get in touch</h1>
 				<p class="intro-text typewrite" data-period="1000" data-type='["Send me a message"]'></p>
 				<a href="mailto:dtgmariano@gmail.com" class="btnghost"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
-				<p></p>
+				
 			</div>
 		</div>
 	</div>
