--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a class="page-scroll" href="#">About</a>
+					<a class="page-scroll" href="#">Home</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="#">Projects</a>
+					<a class="page-scroll" href="#">About</a>
 				</li>
 				<li>
 					<a class="page-scroll" href="#">Contact</a>
@@ -69,19 +69,19 @@
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0 text-left" style="padding-top: 375px">
 					<div class="row" >
-						<span class="fa-stack fa-2x">
+						<span class="fa-stack fa-2x"  style="color:#00BF00">
                     		<a href="https://www.linkedin.com/in/danielmariano/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa"></i></a>
                 		</span>
-                		<span class="fa-stack fa-2x">
+                		<span class="fa-stack fa-2x"  style="color:#00BF00">
                     		<a href="https://github.com/dtgmariano" target="_blank"><i class="fa fa-github fa-stack-1x fa"></i></a>
                 		</span>
-                		<span class="fa-stack fa-2x">
+                		<span class="fa-stack fa-2x" style="color:#00BF00">
                     		<a href="https://twitter.com/dtgmariano" target="_blank"><i class="fa fa-twitter fa-stack-1x fa"></i></a>
                 		</span>
                 		
 					</div>
 					<h1 class="brand-heading" >Daniel Mariano</h1>
-					<p class="intro-text typewrite" data-period="1000" data-type='["User Experience Designer", "Jam Session Explorer", "User Experience Designer", "Cook Hacker", "User Experience Designer", "Music Lover"]'></p>
+					<p class="intro-text typewrite" style="color:#00BF00" data-period="1000" data-type='["User Experience Designer", "Jam Session Explorer", "User Experience Designer", "Cook Hacker", "User Experience Designer", "Music Lover"]'></p>
 				</div>
 			</div>
 		</div>
