--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0 text-left" style="padding-top: 375px">
 					<div class="row" >
-						<span class="fa-stack fa-2x"  style="color:#00BF00">
+						<span class="fa-stack fa-2x">
                     		<a href="https://www.linkedin.com/in/danielmariano/" target="_blank"><i class="fa fa-linkedin fa-stack-1x fa"></i></a>
                 		</span>
-                		<span class="fa-stack fa-2x"  style="color:#00BF00">
+                		<span class="fa-stack fa-2x">
                     		<a href="https://github.com/dtgmariano" target="_blank"><i class="fa fa-github fa-stack-1x fa"></i></a>
                 		</span>
-                		<span class="fa-stack fa-2x" style="color:#00BF00">
+                		<span class="fa-stack fa-2x">
                     		<a href="https://twitter.com/dtgmariano" target="_blank"><i class="fa fa-twitter fa-stack-1x fa"></i></a>
                 		</span>
                 		
