--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
 <section id="about" class="bg-black">
 	<div class="container content-section text-center">
 		<div class="row">
-        	<div class="col-lg-12 text-center" >
+        	<div class="col-lg-12 text-center">
+                <!--h1 class="section-heading" style="color:white">
+                	<span class="fa-stack fa-2x">
+                    	<i class="fa fa-user fa-stack-1x fa"></i></a>
+                	</span>
+                </h1-->
                 <h1 class="section-heading" style="color:white">Who am I?</h1>
             </div>
         </div>
@@ -107,6 +112,11 @@
 		</div>
 		<div class="row" style="padding-top: 4em">
         	<div class="col-lg-12 text-center">
+                <!--h1 class="section-heading" style="color:white">
+                	<span class="fa-stack fa-2x">
+                    	<i class="fa fa-eye fa-stack-1x fa"></i></a>
+                	</span>
+                </h1-->
                 <h1 class="section-heading" style="color:white">My Vision</h1>
             </div>
         </div>
