--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 			<i class="fa fa-bars"></i>
 			</button>
-			<!--a class="navbar-brand page-scroll" href="index.html">Daniel Mariano</a-->
+			<a class="navbar-brand page-scroll" href="index.html">Daniel Mariano</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+		<!--div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 			<ul class="nav navbar-nav">
 				<li>
 					<a class="page-scroll" href="#">Home</a>
@@ -56,7 +56,7 @@
 					<a class="page-scroll" href="#">Contact</a>
 				</li>
 			</ul>
-		</div>
+		</div-->
 		<!-- /.navbar-collapse -->
 	</div>
 <!-- /.container -->
@@ -80,7 +80,7 @@
                 		</span>
                 		
 					</div>
-					<h1 class="brand-heading" >Daniel Mariano</h1>
+					<h1 class="brand-heading">Daniel Mariano</h1>
 					<p class="intro-text typewrite" style="color:#00BF00" data-period="1000" data-type='["User Experience Designer", "Jam Session Explorer", "User Experience Designer", "Cook Hacker", "User Experience Designer", "Music Lover"]'></p>
 				</div>
 			</div>
@@ -94,39 +94,35 @@
 	<div class="container content-section text-center">
 		<div class="row">
         	<div class="col-lg-12 text-center">
-                <!--h1 class="section-heading" style="color:white">
-                	<span class="fa-stack fa-2x">
+                <h1 class="section-heading" style="color:white"><span class="fa-stack fa-2x">
                     	<i class="fa fa-user fa-stack-1x fa"></i></a>
-                	</span>
-                </h1-->
-                <h1 class="section-heading" style="color:white">Who am I?</h1>
+                	</span>Who am I?</h1>
             </div>
         </div>
 		<div class="row" style="padding-left: 10px; padding-right: 10px;">
 			<div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left" style="color:#FFFFFF">
-					I am Daniel Mariano, a User Experience Designer based in Eindhoven, The Netherlands, currently working within the User System Interaction program at TU/e. As an addition to my UX skills, I have a Biomedical and Electrical Engineering background.
+					I am a User Experience Designer based in Eindhoven, The Netherlands, currently working within <a target="_blank" href="http://usitue.nl/trainees" style="color:#00BF00">the User System Interaction program at TU/e</a>. As an addition to my UX skills, I have a Biomedical and Electrical Engineering background.
 					<br>
 				</p>
 			</div>
 		</div>
 		<div class="row" style="padding-top: 4em">
         	<div class="col-lg-12 text-center">
-                <!--h1 class="section-heading" style="color:white">
-                	<span class="fa-stack fa-2x">
+                <h1 class="section-heading" style="color:white"><span class="fa-stack fa-2x">
                     	<i class="fa fa-eye fa-stack-1x fa"></i></a>
-                	</span>
-                </h1-->
-                <h1 class="section-heading" style="color:white">My Vision</h1>
+                	</span>My vision</h1>
             </div>
         </div>
 		<div class="row" style="padding-left: 10px; padding-right: 10px;">
 			<div class="col-lg-8 col-lg-offset-2">
 				<p class="text-left" style="color:#FFFFFF">
-					 As a UX designer, I'm inspired to explore new ideas that can empower people's life. With a user-centered approach, my purpose is to meet users needs with business goals, to design a successful product.
+					As a UX designer, I am inspired to explore new ideas that can empower people's life. With a user-centered approach, my purpose is to meet users needs with business goals, to design a successful product.
+					<br>
 				</p>
 			</div>
 		</div>
+		
 		<div class="row" style="padding-top: 4em">
 			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
 		</div>
@@ -134,7 +130,7 @@
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="bg-white">
+<!--section id="contact" class="bg-white">
 	<div class="container content-section text-center">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
@@ -144,6 +140,21 @@
 				
 			</div>
 		</div>
+	</div>
+</section-->
+
+<section id="contact" class="contact intro-main">
+	<div class="intro-body">
+		<div class="container">
+			<div class="row" style="padding-top: 205px">
+				<div class="col-lg-8 col-lg-offset-2">
+				<h1>Let's get in touch</h1>
+				<p class="intro-text typewrite" data-period="1000" data-type='["Send me a message"]'></p>
+				<a href="mailto:dtgmariano@gmail.com" class="btnghost" style=" border-color: white; color:white"><i class="fa fa-envelope"></i> dtgmariano@gmail.com</a>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </section>
 
