--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@
 			<a class="navbar-brand page-scroll" href="index.html">Daniel Mariano</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
-		<!--div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+		<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 			<ul class="nav navbar-nav">
 				<li>
-					<a class="page-scroll" href="#">Home</a>
+					<a class="page-scroll" href="#header">Home</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="#">About</a>
+					<a class="page-scroll" href="#about">About</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="#">Contact</a>
+					<a class="page-scroll" href="#contact">Contact</a>
 				</li>
 			</ul>
-		</div-->
+		</div>
 		<!-- /.navbar-collapse -->
 	</div>
 <!-- /.container -->
 </nav>
 
 <!-- Intro Header -->
-<header class="intro intro-main">
+<header id="header" class="intro intro-main">
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
