--- a/work/reach/index.html
+++ b/work/reach/index.html
@@ -6,11 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Engage seniors to (re)establish food-related habits - Portfolio Daniel Mariano</title>
+<title>Engage seniors to (re)establish food-related habits</title>
 <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="../../css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
-<link href="css/theme.css" rel="stylesheet">
+<link href="../../css/theme.css" rel="stylesheet">
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -21,6 +21,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105775107-1"></script>
 <script>
@@ -66,7 +67,7 @@
 </nav>
 
 <!-- Intro Header -->
-<header class="intro st kooktafelparallax">
+<header class="intro reach">
 	<div class="intro-body">
 		<div class="container">
 			<div class="row">
