--- a/work/index2.html
+++ b/work/index2.html
@@ -8,9 +8,9 @@
 <meta name="author" content="">
 <title>Daniel Mariano</title>
 <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="../css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
-<link href="css/theme.css" rel="stylesheet">
+<link href="../css/theme.css" rel="stylesheet">
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
 
   gtag('config', 'UA-105775107-1');
 </script>
-<script src="js/typewriter.js"></script>
+<script src="../js/typewriter.js"></script>
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -107,7 +107,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="row" style="padding-top: 4em; padding-bottom: 0em">
+		<div class="row" style="padding-top: 4em">
         	<div class="col-lg-12 text-center">
                 <h1 class="section-heading" style="color:white"><span class="fa-stack fa-2x">
                     	<i class="fa fa-eye fa-stack-1x fa"></i></a>
@@ -122,50 +122,140 @@
 				</p>
 			</div>
 		</div>
-		<div class="row" style="padding-top: 4em; padding-bottom: 0em">
-        	<div class="col-lg-12 text-center">
-                <h1 class="section-heading" style="color:white"><span class="fa-stack fa-2x">
-                    	<i class="fa fa-spinner fa-stack-1x fa"></i></a>
-                	</span>My process</h1>
-            </div>
-        </div>
-		<div class="row col-lg-10 col-lg-offset-1"  style="color:white; padding-left: 10px; padding-right: 10px; padding-bottom: 4em;">   
-            <div class="col-md-3" >
+		
+		<div class="row" style="padding-top: 4em">
+			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
+		</div>
+	</div>
+</section>
+
+<!-- Portfolio Grid Section -->
+<section id="projects" class="bg-white p-0">
+    <div class="container content-section text-center">
+    	<div class="row">
+    		<h1>My projects</h1>
+       		<div class="col-lg-8 col-lg-offset-2">
+      			<p style="margin-bottom: 30px;">These are some of the works that I've been working recently.</p>
+       		</div>
+       	</div>
+       	<div class="row">
+       		<div class="row no-gutter popup-gallery">
+	          	<div class="col-sm-4">
+	            	<a class="portfolio-box" href="">
+		              	<img class="img-fluid" src="img/tb.png" alt="">
+		              	<div class="portfolio-box-caption">
+		                	<div class="portfolio-box-caption-content">
+		                		<h4 class="projname">Smart device for operators in a factory</h4>
+		                		<h6 class="projdesc">User research, Prototype, Usability Testing, IoT</h6>
+		                	</div>
+		             	 </div>
+		              	
+	            	</a>	
+	          	</div>
+	          	<div class="col-sm-4">
+	            	<a class="portfolio-box" href="">
+		              	<img class="img-fluid" src="img/tb.png" alt="">
+		              	<div class="portfolio-box-caption">
+		                	<div class="portfolio-box-caption-content">
+		                		<h4 class="projname">De Kooktafel: Cooking aid system for seniors</h4>
+		                		<h6 class="projdesc">Interactive-Table, Cooking Aid, Prototype, User Test</h6>
+		                	</div>
+		             	 </div>
+		              	
+	            	</a>	
+	          	</div>
+	          	<div class="col-sm-4">
+		            <a class="portfolio-box" href="">
+		              	<img class="img-fluid" src="img/tb.png" alt="">
+		              	<div class="portfolio-box-caption">
+		                	<div class="portfolio-box-caption-content">
+		                		<h4 class="projname">DoChange: Identifying data loss during a trial</h4>
+		                		<h6 class="projdesc">IoT, Wearables, Data Analysis, Visualization</h6>
+		                	</div>
+		             	 </div>
+		            </a>
+		        </div>
+		        <!--div class="col-sm-4">
+			        <a class="portfolio-box" href="">
+			            <img class="img-fluid" src="img/tb.png" alt="">
+			            <div class="portfolio-box-caption">
+			                <div class="portfolio-box-caption-content">
+			                	<h4 class="projname">Eventix.IO: Research and design for a sales dashboard</h4>
+		              		 	<h6 class="projdesc"></h6>
+			                </div>
+			            </div>
+			        </a>
+			    </div> 
+			    <div class="col-sm-4">
+			        <a class="portfolio-box" href="">
+			            <img class="img-fluid" src="img/tb.png" alt="">
+			            <div class="portfolio-box-caption">
+			                <div class="portfolio-box-caption-content">
+			                	<h4 class="projname">Design for ALS patients II: Sensors</h4>
+		              		 	<h6 class="projdesc">Arduino, .NET-based Prototype, User test, Data Analysis</h6>
+			                </div>
+			            </div>
+			        </a>
+			    </div> 
+			    <div class="col-sm-4">
+			        <a class="portfolio-box" href="">
+			            <img class="img-fluid" src="img/tb.png" alt="">
+			            <div class="portfolio-box-caption">
+			                <div class="portfolio-box-caption-content">
+			                	<h4 class="projname">Design for ALS patients I: AAC-Software</h4>
+		              		 	<h6 class="projdesc">User research, .NET-based Prototype, User Test, Data Analysis</h6>
+			                </div>
+			            </div>
+			        </a>
+			    </div--> 
+		    </div>
+	    </div>
+    </div>
+</section>
+
+<!-- About Section -->
+<section id="process" class="bg-black">
+	<div class="container content-section text-center">
+    	<div class="row">
+    		<h1>My process</h1>
+       		<div class="col-lg-8 col-lg-offset-2">
+      			<p style="margin-bottom: 30px;"></p>
+       		</div>
+       	</div>
+       	<div class="row col-lg-10 col-lg-offset-1"  style="padding-left: 10px; padding-right: 10px;">   
+            <div class="col-md-3">
                 <span class="fa-stack fa-4x">
                     <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
                 </span>
-                <h4 class="service-heading">Planning & Strategy</h4>
-                <p class="text">User-Centered Design, Stakeholder Management, Agile Orientation, Design Sprints</p>
+                <h4 class="service-heading">Planning</h4>
+                <p class="text-muted">User-Centered Design, Stakeholder Management, Agile Orientation, Design Sprints</p>
             </div>  
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
                     <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-users fa-stack-1x fa"></i>
                 </span>
-                <h4 class="service-heading">Research & Ideation</h4>
-                <p class="text">Benchmarking, Contextual Task Analysis, Interviews, Personas</p>
+                <h4 class="service-heading">Research</h4>
+                <p class="text-muted">Benchmarking, Contextual Task Analysis, Interviews, Personas</p>
             </div> 
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
                     <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-rocket fa-stack-1x fa"></i>
                 </span>
-                <h4 class="service-heading">Prototype & Testing</h4>
-                <p class="text">Electronics, Arduino, Programming, Axure, Usability Testing</p>
+                <h4 class="service-heading">Prototype & Test</h4>
+                <p class="text-muted">Electronics, Arduino, Programming, Axure, Usability Testing</p>
             </div>
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
                     <!--i class="fa fa-circle fa-stack-2x text-primary"></i-->
                     <i class="fa fa-line-chart fa-stack-1x fa"></i>
                 </span>
-                <h4 class="service-heading">Analysis & Reflection</h4>
-                <p class="text">Signal Processing, Data Analytics, Data Visualization, Hypothesis Testing, Statistics</p>
+                <h4 class="service-heading">Analysis</h4>
+                <p class="text-muted">Data Processing, Data Analytics, Hypothesis Testing, Statistics, Data Visualization</p>
             </div>  
         </div>
-		<div class="row">
-			<a target="_blank" href="https://www.dropbox.com/s/isxzot3cu2rrqk9/mariano_resume_sep17.pdf?dl=0" class="btnghost" style="border-color: white; color:white"><i class="fa fa-file-pdf-o" style="color:white"></i> Download my CV</a>
-		</div>
 	</div>
 </section>
 
