--- a/work/index2.html
+++ b/work/index2.html
@@ -229,7 +229,7 @@
                     <i class="fa fa-puzzle-piece fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Planning</h4>
-                <p class="text-muted">User-Centered Design, Stakeholder Management, Agile Orientation, Design Sprints</p>
+                <p class="text-muted">User-Centered Design, Stakeholder Management, Agile Orientation</p>
             </div>  
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
@@ -237,7 +237,7 @@
                     <i class="fa fa-users fa-stack-1x fa"></i>
                 </span>
                 <h4 class="service-heading">Research</h4>
-                <p class="text-muted">Benchmarking, Contextual Task Analysis, Interviews, Personas</p>
+                <p class="text-muted">Benchmarking, Contextual Task Analysis, Interviews, Personas, Design Sprint</p>
             </div> 
             <div class="col-md-3">
                 <span class="fa-stack fa-4x">
